[svn] Add support for 1e3 style numbers.

--- a/ralcalc.1
+++ b/ralcalc.1
@@ -38,7 +38,7 @@ ralcalc supports the SI prefix characters for both input and output:
 2u/35 = 57.1429n
 .RE
 .PP
-Numbers of the form 1e-3 are not yet supported.
+Numbers of the form 1e-3 are also supported, where the "e" indicates a power of ten. Don't mix and match SI prefixes and "e"s in the same number (although 1e-3n is valid, 1ne-3 is not - avoid both for less confusion).
 
 .SH OPERATORS
 
