[svn] Fix install for Mac OS X (doesn't like install --strip). Fix uninstall target (wasn't uninstalling ralcalc.1). Include =.1 in dist target.

--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,11 @@
+20070614
+========
+
+- Fixed Makefile for Mac OS X.
+- Included missing "=.1" to dist target.
+- Fixed uninstall target.
+
+
 20070613
 ========
 
