[svn] Improve bracket matching and error detection. Precedence is reset correctly after processing a pair of brackets, so the power (^) operator is now used in e.g. "= [1+2]^2" where it wasn't before.

--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,14 @@
+20070616
+========
+
+- Precedence is now reset correctly after processing brackets. Previously it
+  was being set one value too low, so the power (^) operator was being missed
+  out for e.g. "= [1+2]^3", which would return the answer "3".
+
+- Bracket matching has been improved, so if there are more close brackets than
+  open it is detected.
+
+
 20070614
 ========
 
