Huge cleanup of the directory structure. Improvements to Makefiles - the bits for dealing with po files are taken from tuxcast. Licence change to GPL - because of the above. Added i18n/L10n support.

--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,13 @@
+1.0 (20080322)
+==============
+
+- i18n / L10n support.
+- Big cleanup of directory structure.
+- Makefile improvements - including use of DESTDIR.
+- Change license to GPL - many of the Makefile improvements come from a GPL
+  project.
+
+
 20070712
 ========
 
