--- a/man/ralcalc.1
+++ b/man/ralcalc.1
@@ -1,4 +1,4 @@
-.TH "ralcalc" "1" "12th July 2007" "" ""
+.TH "ralcalc" "1" "22nd March 2008" "" ""
 .SH NAME
 ralcalc \- a simple command line calculator
 
@@ -160,9 +160,6 @@ Internal error: If an unknown error code is passed to the error output function,
 .TP
 .B 1
 .I At least one error occurred.
-
-.SH BUGS
-None known...
 
 .SH AUTHOR
 Roger Light <roger@atchoo.org>
