--- a/changes.txt
+++ b/changes.txt
@@ -4,6 +4,7 @@
 - Added the "-f filename" option. This will process each line of "filename" as
   though it was typed in at the command line.
 - Added the "-i" option which does the same as "-f" but for stdin.
+- Added support for log/ln functions.
 
 
 1.0.1 (20080322)
