--- a/man/ralcalc.1
+++ b/man/ralcalc.1
@@ -1,4 +1,4 @@
-.TH "ralcalc" "1" "1st June 2008" "" ""
+.TH "ralcalc" "1" "9th June 2008" "" ""
 .SH NAME
 ralcalc \- a simple command line calculator
 
