--- a/man/ralcalc.1
+++ b/man/ralcalc.1
@@ -94,7 +94,7 @@ ralcalc stores the result of the calculation so that it can be used in the next 
 
 .SH FUNCTIONS
 
-The functions sin, cos, tan, asin, acos, atan, log (base 10 logarithm) and ln (natural logarithm) are supported. The trigonometric functions work on radians. The use of brackets is not necessary, but is recommended where precedence may be confusing. The functions have equal precedence to multiplication/division so care must be taken:
+The functions sin, cos, tan, asin, acos, atan, sqrt, log (base 10 logarithm) and ln (natural logarithm) are supported. The trigonometric functions work on radians. The use of brackets is not necessary, but is recommended where precedence may be confusing. The functions have equal precedence to multiplication/division so care must be taken:
 .PP
 .RS
 = sin2x2
