--- a/man/ralcalc.1
+++ b/man/ralcalc.1
@@ -1,4 +1,4 @@
-.TH "ralcalc" "1" "15th September 2008" "" ""
+.TH "ralcalc" "1" "14th November 2008" "" ""
 .SH NAME
 ralcalc \- a simple command line calculator
 
@@ -121,7 +121,7 @@ A list of calculations can be processed at once by placing them in a file. Each 
 238/1064x100
 .RE
 .PP
-File input is also possible using stdin, i.e. reading interactively directly from the terminal with each line being calculated as normal. To quit, type "q" or "quit" on a new line, or use Ctrl-D to indicate the end of file, or Ctrl-C to cause ralcalc to be terminated.
+File input is also possible using stdin, i.e. reading interactively directly from the terminal with each line being calculated as normal. To quit, type "q" or "quit" on a new line, use Ctrl-D to indicate the end of file, or Ctrl-C to cause ralcalc to be terminated.
 .PP
 If either of the file input options are given on the command line, then any calculation given on the command line will be calculated first. If both of the file input options are given, then the calculations from the -f option will be carried out first, followed by from stdin.
 
