--- a/changes.txt
+++ b/changes.txt
@@ -4,6 +4,9 @@
 - Fix bug whereby the precedence wasn't reset correctly after processing a
   pair of brackets. This would lead to problems with calculations where a
   power directly followed a close bracket: [2+3]^3.
+- Included Brazilian Portugese translations thanks to Ricardo Ichizo.
+- Included French translations thanks to Djalil Oulmane.
+- Included Spanish translations thanks to Daniel.
 
 
 1.2.3 (20080916)
