--- a/po/es.po
+++ b/po/es.po
@@ -7,30 +7,30 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ralcalc\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-15 16:44+0100\n"
-"PO-Revision-Date: 2008-05-03 22:25+0000\n"
-"Last-Translator: Eduardo Ruiz <eduardo.ruizcarrillo@gmail.com>\n"
+"POT-Creation-Date: 2008-11-14 00:50+0000\n"
+"PO-Revision-Date: 2008-08-19 13:22+0000\n"
+"Last-Translator: Daniel <darry100@gmail.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-06-02 10:40+0000\n"
+"X-Launchpad-Export-Date: 2008-11-14 00:48+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:109
 #, c-format
 msgid " out of memory\n"
-msgstr ""
+msgstr " fuera de la memoria\n"
 
 #: ../src/output.c:112
 #, c-format
 msgid " bad input to function (internal)\n"
-msgstr ""
+msgstr " Entrada a la función incorrecta (interno)\n"
 
 #: ../src/output.c:114
 #, c-format
 msgid " unknown token\n"
-msgstr ""
+msgstr " Símbolo desconocido\n"
 
 #: ../src/output.c:117
 #, c-format
@@ -40,37 +40,37 @@ msgstr " mal numero\n"
 #: ../src/output.c:120
 #, c-format
 msgid " mismatched brackets\n"
-msgstr ""
+msgstr " Los paréntesis no coinciden\n"
 
 #: ../src/output.c:123
 #, c-format
 msgid " duplicate number\n"
-msgstr ""
+msgstr " Número duplicado\n"
 
 #: ../src/output.c:126
 #, c-format
 msgid " invalid operator\n"
-msgstr ""
+msgstr " Operador invalido\n"
 
 #: ../src/output.c:129
 #, c-format
 msgid " invalid bracket\n"
-msgstr ""
+msgstr " Paréntesis no valido\n"
 
 #: ../src/output.c:132
 #, c-format
 msgid " unable to open file\n"
-msgstr ""
+msgstr " Ha sido imposible abrir el archivo\n"
 
 #: ../src/output.c:134
 #, c-format
 msgid " unknown error (%d)\n"
-msgstr ""
+msgstr " Error desconocido (%d)\n"
 
 #: ../src/ralcalc.c:44
 #, c-format
 msgid "ralcalc  version %s (build date: %s)\n"
-msgstr ""
+msgstr "ralcalc version %s (build date: %s)\n"
 
 #: ../src/ralcalc.c:45
 #, c-format
@@ -88,6 +88,10 @@ msgid ""
 "as described in the COPYING file distributed with this program.\n"
 "\n"
 msgstr ""
+"Racalc esta desprovisto de CUALQUIER GARANTIA. Usted puede distribuir racalc "
+"libremente\n"
+"como se indica en el archivo COPYING que acompaña a esta aplicación\n"
+"\n"
 
 #: ../src/ralcalc.c:47
 #, c-format
@@ -95,11 +99,13 @@ msgid ""
 "ralcalc is a simple command line calculator. \n"
 "\n"
 msgstr ""
+"ralcalc es una calculadora simple en linea de comando. \n"
+"\n"
 
 #: ../src/ralcalc.c:48
 #, c-format
 msgid "Usage: ralcalc -h   (display this text)\n"
-msgstr ""
+msgstr "Uso: ralcalc -h (muestra este mensaje)\n"
 
 #: ../src/ralcalc.c:49
 #, c-format
@@ -110,11 +116,12 @@ msgstr ""
 #, c-format
 msgid "       ralcalc [-e] [-f input file] [-i] [-q] [-r] <an equation>\n"
 msgstr ""
+"       ralcalc [-e] [-f fichero de entrada] [-i][-q][-r] <una ecuación>\n"
 
 #: ../src/ralcalc.c:51
 #, c-format
 msgid "Options\n"
-msgstr ""
+msgstr "Opcciones\n"
 
 #: ../src/ralcalc.c:52
 #, c-format
@@ -122,26 +129,29 @@ msgid ""
 " -e    Use the '1e-3' form of display for the answer rather than SI "
 "prefixes.\n"
 msgstr ""
+" -e Usa la notación '1e-3' en lugar de la notación Prefijo SI para mostrar "
+"los resultados.\n"
 
 #: ../src/ralcalc.c:53
 #, c-format
 msgid " -f    Process a list of calculations from a file.\n"
-msgstr ""
+msgstr " -f Procesa una lista de operaciones apartir de un archivo.\n"
 
 #: ../src/ralcalc.c:54
 #, c-format
 msgid " -i    Process a list of calculations from stdin.\n"
 msgstr ""
+" -i Procesa una lista de operaciones mediante la entrada standar stdin\n"
 
 #: ../src/ralcalc.c:55
 #, c-format
 msgid " -q    Only display the answer (quiet).\n"
-msgstr ""
+msgstr " -q Solo muestra la respuesta (quiet)\n"
 
 #: ../src/ralcalc.c:56
 #, c-format
 msgid " -r    Display the answer with neither SI prefixes nor exponents.\n"
-msgstr ""
+msgstr " -r Muestra la respuesta sin prefijos SI ni exponentes.\n"
 
 #: ../src/ralcalc.c:57
 #, c-format
@@ -149,6 +159,8 @@ msgid ""
 "\n"
 "See http://atchoo.org/tools/ralcalc/ for updates.\n"
 msgstr ""
+"\n"
+"Visite http://atchoo.org/tools/ralcalc/ para actualizar\n"
 
 #: ../src/ralcalc.c:68
 #, c-format
@@ -157,7 +169,7 @@ msgstr ""
 
 #: ../src/ralcalc.c:69
 #, c-format
-msgid "  1.0 : example number\n"
+msgid "  1.0    : example number\n"
 msgstr ""
 
 #: ../src/ralcalc.c:70
@@ -167,12 +179,12 @@ msgstr ""
 
 #: ../src/ralcalc.c:71
 #, c-format
-msgid "  1.0m : example number\n"
+msgid "  1.0m   : example number\n"
 msgstr ""
 
 #: ../src/ralcalc.c:72
 #, c-format
-msgid "  _ : previous result\n"
+msgid "  _      : previous result\n"
 msgstr ""
 
 #: ../src/ralcalc.c:73
@@ -186,40 +198,40 @@ msgid "  k, M, G, T, P, E, Z, Y : SI prefixes\n"
 msgstr ""
 
 #: ../src/ralcalc.c:75
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "\n"
 "Operators:\n"
-msgstr ""
+msgstr "Opcciones\n"
 
 #: ../src/ralcalc.c:76
 #, c-format
-msgid "  + : addition\n"
+msgid "  +     : addition\n"
 msgstr ""
 
 #: ../src/ralcalc.c:77
 #, c-format
-msgid "  - : subtraction\n"
+msgid "  -     : subtraction\n"
 msgstr ""
 
 #: ../src/ralcalc.c:78
 #, c-format
-msgid "  * x : multiplication\n"
+msgid "  * x   : multiplication\n"
 msgstr ""
 
 #: ../src/ralcalc.c:79
 #, c-format
-msgid "  / : division\n"
+msgid "  /     : division\n"
 msgstr ""
 
 #: ../src/ralcalc.c:80
 #, c-format
-msgid "  %% : modulus\n"
+msgid "  %%     : modulus\n"
 msgstr ""
 
 #: ../src/ralcalc.c:81
 #, c-format
-msgid "  ^ : power\n"
+msgid "  ^     : power\n"
 msgstr ""
 
 #: ../src/ralcalc.c:82
@@ -228,20 +240,20 @@ msgid "  () [] : brackets increase precedence\n"
 msgstr ""
 
 #: ../src/ralcalc.c:83
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "\n"
 "Functions:\n"
-msgstr ""
+msgstr "Opcciones\n"
 
 #: ../src/ralcalc.c:84
 #, c-format
-msgid "  log X : logarithm to base 10 of X\n"
+msgid "  log X         : logarithm to base 10 of X\n"
 msgstr ""
 
 #: ../src/ralcalc.c:85
 #, c-format
-msgid "  ln X : natural logarithm of X\n"
+msgid "  ln X          : natural logarithm of X\n"
 msgstr ""
 
 #: ../src/ralcalc.c:86
@@ -261,32 +273,37 @@ msgstr ""
 
 #: ../src/ralcalc.c:89
 #, c-format
+msgid "  sqrt X        : square root of X\n"
+msgstr ""
+
+#: ../src/ralcalc.c:90
+#, c-format
 msgid ""
 "\n"
 "Constants:\n"
 msgstr ""
 
-#: ../src/ralcalc.c:90
+#: ../src/ralcalc.c:91
 #, c-format
-msgid "  pi : 3.14159\n"
+msgid "  pi  : 3.14159\n"
 msgstr ""
 
-#: ../src/ralcalc.c:91
+#: ../src/ralcalc.c:92
 #, c-format
 msgid "  exp : 2.71828\n"
 msgstr ""
 
-#: ../src/ralcalc.c:196 ../src/ralcalc.c:239
+#: ../src/ralcalc.c:197 ../src/ralcalc.c:240
 #, c-format
 msgid "Error: Out of memory\n"
-msgstr ""
+msgstr "Error: Fuera de memoria\n"
 
-#: ../src/ralcalc.c:316
+#: ../src/ralcalc.c:317
 #, c-format
 msgid "Error: Unable to open file \"%s\"\n"
-msgstr ""
+msgstr "Error: Fue imposible abrir el archivo \"%s\"\n"
 
-#: ../src/tokens.c:254
+#: ../src/tokens.c:255
 #, c-format
 msgid "Unknown token (%d)\n"
-msgstr ""
+msgstr "Símbolo desconocido (%d)\n"
