--- a/po/ralcalc.pot
+++ b/po/ralcalc.pot
@@ -1,20 +1,17 @@
-# ralcalc 1.0
-# Copyright (C) 2007,2008 Roger Light
-# This file is distributed under the same license as the ralcalc package.
-# Roger Light <roger@atchoo.org>, 2007-2008
-#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-14 00:50+0000\n"
+"POT-Creation-Date: 2008-12-15 23:48+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2008-12-15 18:21+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:109
 #, c-format
@@ -285,7 +282,7 @@ msgstr ""
 msgid "Error: Out of memory\n"
 msgstr ""
 
-#: ../src/ralcalc.c:317
+#: ../src/ralcalc.c:319
 #, c-format
 msgid "Error: Unable to open file \"%s\"\n"
 msgstr ""
