--- a/changes.txt
+++ b/changes.txt
@@ -4,6 +4,8 @@ x.x.x (200xxxxx)
 - Preserve some spaces in equations when output. This will compress multiple
   spaces into a single space, but there will always be at least a single space
   in the output if there is one in the input.
+- Fixed bug where SI prefixes entered on their own were treated as a number of
+  value zero. This means that "= 1/p" correctly produces an error now.
 - Included Basque translations thanks to Mikel Alzibar.
 
 
