--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,11 @@
+x.x.x (200xxxxx)
+================
+
+- Complete Brazilian Portugese translations thanks to Enrico Nicoletto.
+- Some French translation of the man page thanks to Pierre Rudloff.
+- United Kingdom English translations thanks to Jen Ockwell (I'm UK English
+  anyway, but it's nice to have someone else check what I've written!)
+
 1.3.0 (20081218)
 ================
 
