--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ralcalc\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-12-18 10:55+0000\n"
-"PO-Revision-Date: 2008-12-14 22:53+0000\n"
+"POT-Creation-Date: 2009-01-04 16:18+0000\n"
+"PO-Revision-Date: 2009-01-03 23:57+0000\n"
 "Last-Translator: Enrico Nicoletto <liverig@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-12-15 18:21+0000\n"
+"X-Launchpad-Export-Date: 2009-01-04 13:16+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../src/output.c:109
@@ -30,7 +30,7 @@ msgstr " entrada ruim para função (interno)\n"
 #: ../src/output.c:114
 #, c-format
 msgid " unknown token\n"
-msgstr " token desconhecido\n"
+msgstr " símbolo desconhecido\n"
 
 #: ../src/output.c:117
 #, c-format
@@ -40,7 +40,7 @@ msgstr " número ruim\n"
 #: ../src/output.c:120
 #, c-format
 msgid " mismatched brackets\n"
-msgstr " colchetes inadequados\n"
+msgstr " parênteses inadequados\n"
 
 #: ../src/output.c:123
 #, c-format
@@ -55,7 +55,7 @@ msgstr " operador inválido\n"
 #: ../src/output.c:129
 #, c-format
 msgid " invalid bracket\n"
-msgstr " colchete inválido\n"
+msgstr " parênteses inválido\n"
 
 #: ../src/output.c:132
 #, c-format
@@ -191,12 +191,12 @@ msgstr "  _      :resultado anterior\n"
 #: ../src/ralcalc.c:73
 #, c-format
 msgid "  y, z, a, f, p, n, u, m : SI prefixes\n"
-msgstr ""
+msgstr "  y, z, a, f, p, n, u, m : Prefixos SI\n"
 
 #: ../src/ralcalc.c:74
 #, c-format
 msgid "  k, M, G, T, P, E, Z, Y : SI prefixes\n"
-msgstr ""
+msgstr "  k, M, G, T, P, E, Z, Y : Prefixos SI\n"
 
 #: ../src/ralcalc.c:75
 #, c-format
@@ -205,7 +205,7 @@ msgid ""
 "Operators:\n"
 msgstr ""
 "\n"
-"Operações:\n"
+"Operadores:\n"
 
 #: ../src/ralcalc.c:76
 #, c-format
@@ -240,7 +240,7 @@ msgstr "  ^     : expoente\n"
 #: ../src/ralcalc.c:82
 #, c-format
 msgid "  () [] : brackets increase precedence\n"
-msgstr ""
+msgstr "  () [] : os parênteses aumentam a precedência\n"
 
 #: ../src/ralcalc.c:83
 #, c-format
@@ -264,22 +264,22 @@ msgstr "  ln X          : logaritmo natural de X\n"
 #: ../src/ralcalc.c:86
 #, c-format
 msgid "  sin X, asin X : sine, arcsin of X\n"
-msgstr ""
+msgstr "  sin X, asin X : seno, arco do seno de X\n"
 
 #: ../src/ralcalc.c:87
 #, c-format
 msgid "  cos X, acos X : cosine, arccos of X\n"
-msgstr ""
+msgstr "  cos X, acos X : cosseno, arco do cosseno de X\n"
 
 #: ../src/ralcalc.c:88
 #, c-format
 msgid "  tan X, atan X : tangent, arctan of X\n"
-msgstr ""
+msgstr "  tan X, atan X : tangente, arco da tangente de X\n"
 
 #: ../src/ralcalc.c:89
 #, c-format
 msgid "  sqrt X        : square root of X\n"
-msgstr ""
+msgstr "  sqrt X        : raiz quadrada de X\n"
 
 #: ../src/ralcalc.c:90
 #, c-format
@@ -300,17 +300,17 @@ msgstr "  pi  : 3.14159\n"
 msgid "  exp : 2.71828\n"
 msgstr "  exp : 2.71828\n"
 
-#: ../src/ralcalc.c:197 ../src/ralcalc.c:240
+#: ../src/ralcalc.c:197 ../src/ralcalc.c:241
 #, c-format
 msgid "Error: Out of memory\n"
-msgstr "Erro: sem memória\n"
+msgstr "Erro: Sem memória\n"
 
-#: ../src/ralcalc.c:315 ../src/ralcalc.c:338
+#: ../src/ralcalc.c:316 ../src/ralcalc.c:339
 #, c-format
 msgid "Error: Invalid SI prefix '%s' for '-s' option.\n"
-msgstr ""
+msgstr "Erro: Prefixo SI '%s' inválido para a opção '-s'.\n"
 
-#: ../src/ralcalc.c:360
+#: ../src/ralcalc.c:361
 #, c-format
 msgid "Error: Unable to open file \"%s\"\n"
 msgstr "Erro: Impossível abrir arquivo \"%s\"\n"
@@ -318,4 +318,4 @@ msgstr "Erro: Impossível abrir arquivo \"%s\"\n"
 #: ../src/tokens.c:255
 #, c-format
 msgid "Unknown token (%d)\n"
-msgstr "Token desconhecido (%d)\n"
+msgstr "Símbolo desconhecido (%d)\n"
