--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,6 @@
-ralcalc (1.2.4-0~ppa2) intrepid; urgency=low
+ralcalc (1.3.1-0ubuntu1) jaunty; urgency=low
 
-  * Fix the "=" symbolic link being linked to ${DESTDIR} by mistake.
+  * Initial release (LP #314236)
 
  -- Roger Light <roger@atchoo.org>  Sat, 15 Nov 2008 23:53:49 +0000
-
-ralcalc (1.2.4-0~ppa1) intrepid; urgency=low
-
-  * Initial release
-
- -- Roger Light <roger@atchoo.org>  Sat, 15 Nov 2008 23:37:50 +0000
 
