--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1.3.1.1 (20090110)
+================
+
+- Clarify licence on a source file.
+
+
 1.3.1 (20090107)
 ================
 
@@ -8,6 +14,7 @@
 - Some French translation of the man page thanks to Pierre Rudloff.
 - United Kingdom English translations thanks to Jen Ockwell (I'm UK English
   anyway, but it's nice to have someone else check what I've written!)
+
 
 1.3.0 (20081218)
 ================
