--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,20 @@
+1.3.1.2 (20090307)
+==================
+
+- Updated Brazilian Portugese translations thanks to Enrico Nicoletto.
+- Further Polish translations thanks to pp/bs.
+- Further Spanish translations thanks to Feder Sáiz.
+- Complete Brazilian Portugese translation of the man page thanks to Enrico
+  Nicoletto.
+- Complete United Kingdom English translation of the man page thanks to Jen
+  Ockwell.
+- Complete Polish translation of the man page thanks to pp/bs.
+- Partial French translation of the man page thanks to Johan Serre.
+- Partial Spanish translation of the man page thanks to Feder Sáiz.
+
+
 1.3.1.1 (20090110)
-================
+==================
 
 - Clarify licence on a source file.
 
